--- a/web/cobrands/fixmystreet.com/layout.scss
+++ b/web/cobrands/fixmystreet.com/layout.scss
@@ -162,56 +162,47 @@ body.fullwidthpage {
 }
 
 body.frontpage {
-    $fms-logo-width: 250px;
-    $fms-logo-height: 50px;
+    $fms-logo-width: 250px; // 300px without the mySociety badge
+    $fms-logo-height: 50px; // 60px "
     $fms-logo-vertical-margin: 2em;
     $mysociety-badge-width: (190px * 0.5);
     $mysociety-badge-height: (254px * 0.5);
 
     #site-logo {
         margin: $fms-logo-vertical-margin 0;
-        // width: 300px; Size without the mySociety badge
         width: $fms-logo-width;
         margin-left: $mysociety-badge-width;
-        position: relative;
         height: $fms-logo-height;
         background: none;
 
         // Override the width="175" height="35" attributes on the svg element,
         // forcing the SVG contents to stretch to the new, larger, size.
         svg {
-            // width: 300px; Size without the mySociety badge
             width: $fms-logo-width;
-            float: right;
             height: $fms-logo-height;
             margin-top: 0; // no need for the vertical centering any more
         }
     }
 
     #mysociety-badge {
+        display: block;
+        position: absolute;
+        z-index: 2;
+        margin-left: -0.75em;
         top: -($fms-logo-vertical-margin + $header-top-border-width);
         width: $mysociety-badge-width;
         height: $mysociety-badge-height;
         outline-offset: -10px;
-
         svg {
-            &:nth-child(1) {
-                display: none; // Hides the mobile version
-            }
-            &:nth-child(2) {
-                display: block;
-            }
+            width: 100%;
+            height: auto;
         }
-    }
-
-    #front-main {
-        margin-top: 0;
     }
 
     #main-nav {
         height: calc(#{$fms-logo-height} + #{$fms-logo-vertical-margin} * 2);
         margin-top: 0;
-        margin-left: 380px; // Prevent overlapping with logo
+        margin-left: $fms-logo-width + $mysociety-badge-width + 16px; // Prevent overlapping with logo
     }
 
     .nav-menu li {
@@ -222,12 +213,12 @@ body.frontpage {
 
     .site-logo__fallback {
         width: $fms-logo-width;
-        padding-top: 60px;
+        padding-top: $fms-logo-height;
         // No need for svg-background-image() here because the
         // logo on the homepage is an inline SVG, and the only browsers
         // not to show it will be IE8 and below, which are @1x.
         background-image: url("/cobrands/fixmystreet.com/images/site-logo-homepage.png");
-        background-size: $fms-logo-width 60px;
+        background-size: $fms-logo-width $fms-logo-height;
     }
 
     .content {
